# microservice-benchmark

./: Makefile  README.md  backend.yaml
api-go/: .gitignore  Dockerfile  Makefile  model.go  server.go
api-go/manifests/: Makefile  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  virtualservice.yaml
api-go/manifests/base/: deployment.yaml
api-go/manifests/overlays/high-resources/: deployment.yaml
api-go/manifests/overlays/low-cpu/: deployment.yaml
api-go/manifests/overlays/low-memory/: deployment.yaml
api-go/manifests/overlays/low-resources/: deployment.yaml
api-java-blocking-io/: .gitignore  Dockerfile  Makefile  pom.xml
api-java-blocking-io/manifests/: Makefile  deployment.yaml  namespace.yaml  virtualservice.yaml
api-java-blocking-io/manifests/base/: deployment.yaml  kustomization.yaml  service.yaml
api-java-nonblocking-io/: .gitignore  Dockerfile  Makefile
api-java-nonblocking-io/manifests/: Makefile  deployment.yaml  service.yaml
api-java-nonblocking-io/manifests/base/: deployment.yaml  kustomization.yaml  namespace.yaml  virtualservice.yaml
api-node-ts/: Dockerfile  Makefile  package-lock.json  package.json  tsconfig.json
api-node-ts/manifests/: Makefile  deployment.yaml  service.yaml  virtualservice.yaml
api-node-ts/manifests/base/: deployment.yaml  kustomization.yaml  namespace.yaml
api-node-ts/src/: model.ts  server.ts
api-rust/: Cargo.toml  Dockerfile  Makefile
api-rust-actix/: Cargo.toml  Dockerfile  Makefile
api-rust-actix/manifests/: Makefile  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  virtualservice.yaml
api-rust-actix/src/: lib.rs  main.rs  model.rs
api-rust-tide/: Cargo.toml  Dockerfile  Makefile
api-rust-tide/manifests/: Makefile  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  virtualservice.yaml
api-rust-tide/src/: main.rs
api-rust/manifests/: Makefile  deployment.yaml  kustomization.yaml  service.yaml
api-rust/manifests/base/: deployment.yaml  namespace.yaml  virtualservice.yaml
api-rust/manifests/overlays/high-resources/: deployment.yaml
api-rust/manifests/overlays/low-cpu/: deployment.yaml
api-rust/manifests/overlays/low-memory/: deployment.yaml  kustomization.yaml
api-rust/manifests/overlays/low-resources/: deployment.yaml
api-rust/manifests/overlays/med-resources/: deployment.yaml
api-rust/src/: lib.rs  main.rs  model.rs
benchmarks/: Dockerfile  Makefile  api-go.yaml  api-go.yml  api-java-blocking.yaml  api-java-nonblocking.yaml  api-node.yaml  api-node.yml  api-rust-actix.yaml  api-rust-tide.yaml  api-rust.yaml  api.yaml  backend-rust.yaml  backend.yaml
benchmarks/gke/: Makefile  api-go.yaml  api-java-blocking.yaml  api-java-nonblocking.yaml  api-node.yaml  api-rust.yaml
benchmarks/local/: api-java-blocking.yaml  api-java-nonblocking.yaml  api-node.yaml  backend-go.yaml  backend-rust.yaml
benchmarks/manifests/: Makefile
benchmarks/manifests/base/: deployment.yaml  kustomization.yaml  namespace.yaml
data/: accounts.json  cards.json  customer.json  generated-1.json
legacy-backend-go/: .gitignore  Dockerfile  Makefile  server.go
legacy-backend-go/manifests/: Makefile  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  virtualservice.yaml
legacy-backend-rust/: Cargo.toml  Dockerfile  Makefile
legacy-backend-rust/data/: accounts.tera  cards.json  cards.tera  customer.tera
legacy-backend-rust/manifests/: Makefile  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  virtualservice.yaml
legacy-backend-rust/src/: main.rs
local-setup/: README.md
results/: high.txt  low.txt  med.txt
(+38 files in other folders)
