[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "api-rust-actix"
version = "0.1.0"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.0.0-beta.3"
chrono = {version = "0.4.15", features = ["serde"]}
env_logger = "0.7.1"
reqwest = {version = "0.10.8", features = ["json"]}
serde = {version = "1.0.115", features = ["derive"]}
structopt = "0.3.17"
thiserror = "1.0.20"
tokio = {version = "0.2.22", features = ["full"]}
url = {version = "2.1.1", features = ["serde"]}
uuid = {version = "0.8.1", features = ["serde", "v4"]}
