[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "api-rust-tide"
version = "0.1.0"

[dependencies]
async-std = {version = "1.6.3", features = ["attributes", "unstable"]}
chrono = {version = "0.4.15", features = ["serde"]}
isahc = {version = "0.9.8", features = ["json"]}
serde = {version = "1.0.115", features = ["derive"]}
structopt = "0.3.17"
tide = "0.13.0"
url = "2.1.1"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
