[package]
authors = ["Stuart Harris <stuart.harris@red-badger.com>"]
edition = "2018"
name = "legacy-backend-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
async-std = {version = "1.6.3", features = ["attributes", "unstable"]}
jen = {version = "1.0.1", default-features = false}
rand = {version = "0.7.3", features = ["small_rng"]}
rand_distr = "0.3.0"
tide = "0.13.0"
